# genealogiacal-tree

./: CMakeLists.txt  README.md
.cache/clangd/index/: Person.cpp.939419ED709C041B.idx  main.cpp.B32B9226F2A4B892.idx
include/union/: Person.h
include/union/core/: FamilyManager.h  Person.h
include/union/tui/: Tui.h
src/: Person.cpp  main.cpp
src/core/: FamilyManager.cpp  Person.cpp
src/tui/: Tui.cpp
